<resources>
    <string name="app_name">Daily Rounds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating: %1$s</string>
    <string name="publish_year">Publish year: %1$s</string>
    <string name="daily_rounds">Daily Rounds</string>
    <string name="create_a_free_account">Create a free account</string>
    <string name="your_email">Your Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="strong">Strong</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="select_country">Select Country</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="log_in">Log in</string>
    <string name="log_in_or_create_account">Log in or Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_now">Register Now</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="sign_up_failed">Sign up failed: %1$s</string>
    <string name="selected">Selected: %1$s</string>
    <string name="please_check_all_the_fields">Please check all the fields</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="successfully_logged_in">Successfully Logged In</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="logged_out">Logged out</string>
</resources>