<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white"
    >

        <TextView
            android:id="@+id/tvLoginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_or_create_account"
            android:textColor="@color/darker_blue"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEmailHeaading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_email"
            android:textColor="@color/darker_blue"
            android:textSize="14sp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@+id/emailLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginHeading" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/OnboardingStyleOuterBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeColor="@color/material_blue"
            app:hintEnabled="false"
            app:hintTextColor="@color/gray"
            android:textColorHint="@color/gray"
            app:cursorColor="@color/darker_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmailHeaading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/OnboardingStyleOInnerBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvPasswordHeaading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/darker_blue"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/emailLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/OnboardingStyleOuterBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeColor="@color/material_blue"
            app:hintEnabled="false"
            app:hintTextColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/darker_blue"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordHeaading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/OnboardingStyleOInnerBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark_gray"
                android:hint="@string/enter_your_password"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/darker_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/material_blue"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="8dp"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingHorizontal="10dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/darker_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/subtle_blue"
            android:text="@string/register_now"
            android:textColor="@color/dark_blue"
            android:textSize="15sp"
            app:strokeWidth="0.8dp"
            app:strokeColor="@color/darker_gray"
            app:rippleColor="#BCFFFFFF"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAccount"
            tools:layout_editor_absoluteX="20dp" />



</androidx.constraintlayout.widget.ConstraintLayout>